main: Clean up overflow scrolling issue for horizontal problems. fingers crossed

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,6 +4,8 @@
 
 html {
   font-family: var(--font-roboto);
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
